lab1/Test/L1-A-0-54.output
Error Type A at Line 6
Error Type A at Line 8
Error Type A at Line 10
Error Type A at Line 15
Error Type A at Line 17
