lab1/Test/L1-A-0-54.cmm
int ;
struct {
  float LF1AFcZQw2rC5MRmx = - ltamR2DHo * lOanBnugOffurqW 
    + Tt2xI - L134nlw + BEDr5q80eFNYmjSDWbT || NH4qMwqDmVQRDv 
    || K8gZq5ZCXU70G , n17GeZ26oWjJhEc02Hn , hEWzFzQoEhuOxgE 
    ;:
}HUhEilpW09VJ4f4um ( int Ev7DhjCh [ 949982735 ] , 
  float YWORW9V7w ^) {
  int zba [ 1279495501 ] = - lxNH_NMLM - _99hXvi_koTllZwgVIGo 
    > sBGfFjDndJw >= Odc_g5d9gk \!= cYx94 <= CEJ3gQyS6i 
    != e5nj > l <= kT0MhEMqVDFxP8Gj80G <= fZ2w4f > V != 
    a1oPnEjFcv < l0MVioueDe5gzO , _K8rX3PuV6XP_fzyqGt 
    , dp ;
  int S5AK2tF45sXJnj7uS = ycKd , L737dO_2Q4xyjLS3qgNn 
    ~;
}
\